qtwebsockets-opensource-src (5.3.2-5) UNRELEASED; urgency=medium

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 24 Sep 2014 00:18:12 -0300

qtwebsockets-opensource-src (5.3.2-4) unstable; urgency=medium

  * Fix some tests to work on kfreebsd. Thanks Adam Majer for the patch!

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 23 Sep 2014 15:17:48 -0300

qtwebsockets-opensource-src (5.3.2-3) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 23 Sep 2014 00:07:57 -0300

qtwebsockets-opensource-src (5.3.2-2) experimental; urgency=medium

  [ Timo Jyrinki ]
  * Add Qt Declarative build dependency and build the QML module

 -- Timo Jyrinki <timo@debian.org>  Fri, 19 Sep 2014 16:13:31 +0300

qtwebsockets-opensource-src (5.3.2-1) experimental; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Fix spaces in debian/copyright. Thanks Scott Kitterman for the hint!
  * New upstream release.
  * Bump Qt build dependencies.

  [ Dmitry Shachnev ]
  * Use correct exception syntax in debian/copyright.
  * Update my e-mail address.
  * Update Vcs-Browser field to point to cgit interface.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 18 Sep 2014 18:30:06 -0300

qtwebsockets-opensource-src (5.3.1-1) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Initial release (closes: #697509).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 21 Jul 2014 19:17:10 -0300