@@ -1,5 +1,9 @@
 qtwebsockets-opensource-src (5.3.2-5) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Disable tests on kfreebsd-*, we now they are not right. See
+    https://bugreports.qt-project.org/browse/QTBUG-41448 for more info.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 24 Sep 2014 00:18:12 -0300
 
 qtwebsockets-opensource-src (5.3.2-4) unstable; urgency=medium
